--- a/styles.css
+++ b/styles.css
@@ -110,25 +110,33 @@
    flex-direction: row;
    
 } 
-.gauche-grand{
+.gauche{
     border: 1px solid black;
     height: 150vh;
     width: 40vh;
     background-color: rgba(209, 207, 182, 0.34);
     margin: 0 5vh;
 }
-.gauche{
+.grand-gauche{
+   
+}
+.haut{
     border: 1px solid blue;
-    height: 60vh;  
+    margin: 0 auto;
+    height: 60vh;
+    background-color: #383434;
+    border-bottom-right-radius: 160px;
+    border-bottom-left-radius: 160px;
 }
 .milieu{
     border: 1px solid yellow;
+    margin: 0 auto;
     height: 30vh;
-   
 }
 .bas{
     border: 1px solid red;
-    height: 60vh;
+    margin: 0 auto;
+    height: 59vh;
 }
 .droite{
     border: 1px solid black;
