--- a/styles.css
+++ b/styles.css
@@ -97,10 +97,7 @@
     transform: scale(1.3);
 }
                /*Partie cv cv.html*/
-.tof{
-    height: 8vh;
-    width: 8vh;
-}
+
 .contenu{
    margin: 20% auto;
    height: 150vh;
@@ -137,9 +134,29 @@
     border: 1px solid red;
     margin: 0 auto;
     height: 59vh;
+    background-color: #383434;
+    border-top-right-radius: 160px;
+    border-top-left-radius: 160px;
 }
 .droite{
     border: 1px solid black;
     height: 100%;
     width: 50vh;
+}
+/* Image  */
+
+.tof{
+    height: 30vh;
+    width: 30vh;
+    border: 4px solid white;
+    border-radius: 50%;
+
+}
+.nom{
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+.nom-dev{
+
 }
