--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,11 @@
     border-width: 4px 4px;
     background-color: white;
     position: relative;
-    animation: slideInFromLeft 3s ease-out forwards;
+    animation: slideInFromLeft 1s ease-out forwards;
 }
 @keyframes slideInFromLeft{
     0%{
-        transform: translateY(-200%);
+        transform: translateY(-100%);
     }
     100%{
         transform: translateY(0%);
@@ -35,11 +35,11 @@
     height: 30%;
     width: 75%;
     border-radius: 40px;
-    animation: Design 3s ease-in-out forwards;
+    animation: Design 1s ease-in-out forwards;
 }
 @keyframes Design{
     0%{
-        transform: translateX(200%);
+        transform: translateX(100%);
     }
     100%{
         transform: translateY(0%);
@@ -63,14 +63,14 @@
     color: #55368A;
     font-weight: 700;
     transition: transform 0.3s ease-in-out;
-    animation: Bienvenu 3s ease-in-out forwards;
+    animation: Bienvenu 1s ease-in-out forwards;
 }
 .bienvenu:hover{
     transform: scale(1.1);
 }
 @keyframes Bienvenu{
     0%{
-        transform: translateX(-200%)
+        transform: translateX(-100%)
     }
     100%{
         transform: translateX(0%);
@@ -124,12 +124,71 @@
     background-color: #383434;
     border-bottom-right-radius: 160px;
     border-bottom-left-radius: 160px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
+
+/* Image  */
+
+.tof{
+    position: relative;
+    top: 2vh;
+    height: 35vh;
+    width: 35vh;
+    border: 4px solid white;
+    border-radius: 50%;
+}
+.nom{
+    font-size: 20px;
+    font-weight: 900;
+    color: white;
+}
+.nom-dev{
+    font-size: 16px;
+    color: white;
+    font-weight: 100;
+}
+/* Le milieu */
 .milieu{
     border: 1px solid yellow;
     margin: 0 auto;
     height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content :left;
 }
+#con{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-left: 3vh; */
+    font-size: 5vh;
+}
+.m1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 4vh 0vh;
+}
+.m2,.m3,.m4{
+    display: flex;
+    margin: 1vh 2vh;
+}
+.contact{
+    font-size: 18px;
+    color: #383434;
+    font-weight: 700;
+    margin-left: 2vh; 
+}
+.tel,.site,.map{
+    margin-left: 1vh;
+    color: #383434;
+}
+/* Le bas à gauche */
 .bas{
     border: 1px solid red;
     margin: 0 auto;
@@ -137,26 +196,162 @@
     background-color: #383434;
     border-top-right-radius: 160px;
     border-top-left-radius: 160px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: left   ;
 }
+.b1{
+    display: flex;
+    margin: 3vh 2vh;
+    margin-bottom: 3vh;
+}
+.parcours{
+    font-size: 18px;
+    font-weight: 900;
+    color: white;
+    margin-left: 2vh;
+}
+#grad{
+    border: 1px solid white;
+    margin-left: 3vh;
+    background-color: white;
+    border-radius: 50%;
+    width: 4vh;
+    height: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.lycee{
+    color: white;
+    font-weight: 700;
+    margin-left: 5vh;
+}
+.bac{
+    color: white;
+    font-weight: 300;
+    margin-left: 5vh; 
+    font-size: 15px;
+    margin-bottom: 2vh;
+}
+.enetp{
+    color: white;
+    font-weight: 700;
+    margin-left: 5vh;
+    
+}
+.master{
+    color: white;
+    font-weight: 300;
+    margin-left: 5vh; 
+    font-size: 15px;
+}
+.b2{
+    display: flex;
+    margin: 3vh 2vh;
+    margin-bottom: 2vh;
+}
+.reference{
+    font-size: 18px;
+    font-weight: 900;
+    color: white; 
+    margin-left: 2vh;
+}
+#ref{
+    border: 1px solid white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    height: 4vh;
+    width: 4vh;
+    margin-left: 2vh;
+}
+.amadou{
+    color: white;
+    font-weight: 700;
+    font-size: 18x;
+    margin-left: 4vh;
+}
+.rue1{
+    font-size: 15px;
+    font-weight: 200;
+    color: white; 
+    margin-left: 5vh;
+    margin-bottom: 2vh;
+}
+.rue2{
+    font-size: 15px;
+    font-weight: 200;
+    color: white; 
+    margin-left: 5vh;
+}
+.ousmane{
+    color: white;
+    font-weight: 700;
+    font-size: 18x;
+    margin-left: 4vh;
+}
+/* à droite */
 .droite{
     border: 1px solid black;
     height: 100%;
     width: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
-/* Image  */
-
-.tof{
-    height: 30vh;
-    width: 30vh;
-    border: 4px solid white;
-    border-radius: 50%;
-
+.apro{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+    position: relative;
+    bottom: 6vh;
+    right: 4.2vh;
 }
-.nom{
+.propo-text{
     font-size: 20px;
+    color: #383434;
     font-weight: 700;
-    color: white;
+    margin-left: 2vh; 
 }
-.nom-dev{
+.texto{
+    position: relative;
+    bottom: 3vh;
+    text-align: justify;
+    opacity: 0.8;
+    font-size: 15px;
+}
+#prop{
+    font-size: 5vh;
+    color: #383434;
+   
+}
+.exp{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+    position: relative;
+}
+.experi-text{
 
+}
+.icoexperi{
+    border: 1px solid #383434;
+    background-color: #383434;
+    border-radius: 50%;
+}
+#experi{
+    font-size: 3vh;
+}
+/* espace de fin */*
+.fin-espace{
+    border: 1px solid black;
+    height: 150vh;
+    width: 5vh;
 }
