--- a/styles.css
+++ b/styles.css
@@ -96,262 +96,238 @@
 .bouton-accueil:hover{
     transform: scale(1.3);
 }
-               /*Partie cv cv.html*/
-
-.contenu{
-   margin: 20% auto;
-   height: 150vh;
-   width: 100vh;
-   border: 1px solid black;
-   display: flex;
-   flex-direction: row;
-   
-} 
-.gauche{
-    border: 1px solid black;
-    height: 150vh;
-    width: 40vh;
-    background-color: rgba(209, 207, 182, 0.34);
-    margin: 0 5vh;
-}
-.grand-gauche{
-   
-}
-.haut{
-    border: 1px solid blue;
-    margin: 0 auto;
-    height: 60vh;
-    background-color: #383434;
-    border-bottom-right-radius: 160px;
-    border-bottom-left-radius: 160px;
+                                            /*Partie cv cv.html*/
+            /* La balise principale main et le body*/
+.cv{
+    min-height: 100vh;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
+    font-size: 10px;
 }
-
-/* Image  */
-
+.contenu{
+  max-height: 210mm;
+  max-width: 297mm;
+  height: 100vh;
+  width: 70.7vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0 3vh;
+  border: 1px solid black;
+  gap: 3vh;
+}
+            /* mon image en haut à gauche */
 .tof{
-    position: relative;
-    top: 2vh;
-    height: 35vh;
-    width: 35vh;
+    height: 27vh;
+    width: 27vh;
     border: 4px solid white;
     border-radius: 50%;
 }
+.img-tete{
+    position: relative;
+    /* top: 5vh; */
+}
+            /* Le div à droite */
+.droite{
+    border: 1px solid black;
+    height: 100%;
+    width: 50%;
+}
+
+            /* Le div à gauche */
+.gauche{
+    border: 1px solid black;
+    height: 100%;
+    width: 50%;
+    background-color: #D9D9D9;
+}
+            /* Les div dans le div  à gauche */
+.haut{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid black;
+    height: 43%;
+    border-bottom-left-radius: 160px;
+    border-bottom-right-radius: 160px; 
+    background-color: #632C2C;
+}
+/* Les éléments dans le div à gauche en haut */
 .nom{
     font-size: 20px;
+    color: #FFFFFF;
     font-weight: 900;
-    color: white;
 }
 .nom-dev{
     font-size: 16px;
     color: white;
-    font-weight: 100;
+    font-weight: 500;
 }
-/* Le milieu */
+/* le div à gauche au milieu */
 .milieu{
-    border: 1px solid yellow;
-    margin: 0 auto;
-    height: 30vh;
+    border: 1px solid black;
+    height: 15%;
     display: flex;
-    flex-direction: column;
-    justify-content :left;
-}
-#con{
-    
-    display: flex;
+    align-items: center ;
     justify-content: center;
-    align-items: center;
-    /* margin-left: 3vh; */
-    font-size: 5vh;
+    flex-direction: column;
 }
+    /* Les div dans le div milieu les icones et les textes */
 .m1{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 4vh 0vh;
+    gap: 0.7em;
+}
+#con{
+    font-size: 2.5em;
+}
+.contact{
+    font-size: 15px;
+    font-weight: 900;
+    color: #632C2C;
 }
 .m2,.m3,.m4{
     display: flex;
-    margin: 1vh 2vh;
-}
-.contact{
-    font-size: 18px;
-    color: #383434;
-    font-weight: 700;
-    margin-left: 2vh; 
-}
-.tel,.site,.map{
-    margin-left: 1vh;
-    color: #383434;
-}
-/* Le bas à gauche */
-.bas{
-    border: 1px solid red;
-    margin: 0 auto;
-    height: 59vh;
-    background-color: #383434;
-    border-top-right-radius: 160px;
-    border-top-left-radius: 160px;
-    display: flex;
+    flex-direction: row;
     justify-content: center;
-    flex-direction: column;
-    align-items: left   ;
+    align-items: center;
+    gap: 1em;
+    /* border: 1px solid black; */
+    /* margin-right: 5em; */
+    margin: 0.1em 0;
 }
-.b1{
-    display: flex;
-    margin: 3vh 2vh;
-    margin-bottom: 3vh;
+.m2{
+    margin-right: 7.7em;
 }
-.parcours{
-    font-size: 18px;
-    font-weight: 900;
-    color: white;
-    margin-left: 2vh;
+.m3{
+    margin-right: 5.7em;
 }
-#grad{
-    border: 1px solid white;
-    margin-left: 3vh;
-    background-color: white;
-    border-radius: 50%;
-    width: 4vh;
-    height: 4vh;
+.m4{
+    margin-right: 8.7em;
+}
+/* le div à gauche en bas */
+.bas{
+    height: 41%;
+    border: 1px solid black;
+    border-top-left-radius: 160px;
+    border-top-right-radius: 160px; 
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    background-color: #632C2C;
 }
-.lycee{
-    color: white;
-    font-weight: 700;
-    margin-left: 5vh;
+        /* Les éléments dans le div en bas */
+.b1{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.7em;
+    margin-top: 3em;
+    margin-right: 4em;
 }
-.bac{
-    color: white;
-    font-weight: 300;
-    margin-left: 5vh; 
-    font-size: 15px;
-    margin-bottom: 2vh;
-}
-.enetp{
-    color: white;
-    font-weight: 700;
-    margin-left: 5vh;
+.cerclegrad{
+    border: 1px solid white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2.3em;
+    width: 2.3em;
+    background-color: white;
     
 }
-.master{
-    color: white;
-    font-weight: 300;
-    margin-left: 5vh; 
+#grad{
     font-size: 15px;
+}
+.parcours{
+    font-size: 15px;
+    font-weight: 900;
+    color: white;
+}
+.lycee{
+    font-size: 12px;
+    font-weight: 700;
+    color: white;
+    margin-right: 7.1em;
+    margin-top: 1em;
+}
+.bac{
+    font-size: 11px;
+    font-weight: lighter;
+    color: white;
+    margin-right: 5.5em;
+    opacity: 0.9;
+}
+.enetp{
+    font-size: 12px;
+    font-weight: 700;
+    color: white;
+    margin-right: 10.3em;
+}
+.master{
+    font-size: 11px;
+    font-weight: lighter;
+    color: white;
+    margin-right: 5.5em;
+    opacity: 0.9;
 }
 .b2{
     display: flex;
-    margin: 3vh 2vh;
-    margin-bottom: 2vh;
+    justify-content: center;
+    align-items: center;
+    gap: 0.7em;
+    margin-right: 2em;
+    margin-top: 2em;
 }
-.reference{
-    font-size: 18px;
-    font-weight: 900;
-    color: white; 
-    margin-left: 2vh;
-}
-#ref{
+.cercleref{
     border: 1px solid white;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 2.3em;
+    width: 2.3em;
     background-color: white;
-    height: 4vh;
-    width: 4vh;
-    margin-left: 2vh;
+}
+#ref{
+    font-size: 15px;
+}
+.reference{
+    font-size: 15px;
+    font-weight: 900;
+    color: white;
 }
 .amadou{
-    color: white;
+    font-size: 12px;
     font-weight: 700;
-    font-size: 18x;
-    margin-left: 4vh;
+    color: white;
+    margin-right: 5.5em;
+    margin-top: 0.5em;
 }
 .rue1{
-    font-size: 15px;
-    font-weight: 200;
-    color: white; 
-    margin-left: 5vh;
-    margin-bottom: 2vh;
-}
-.rue2{
-    font-size: 15px;
-    font-weight: 200;
-    color: white; 
-    margin-left: 5vh;
+    font-size: 11px;
+    font-weight: lighter;
+    color: white;
+    opacity: 0.9;
+    margin-right: 5em;
 }
 .ousmane{
+    font-size: 12px;
+    font-weight: 700;
     color: white;
-    font-weight: 700;
-    font-size: 18x;
-    margin-left: 4vh;
+    margin-right: 5.5em;
 }
-/* à droite */
-.droite{
-    border: 1px solid black;
-    height: 100%;
-    width: 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.apro{
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    align-items: center;
-    position: relative;
-    bottom: 6vh;
-    right: 4.2vh;
-}
-.propo-text{
-    font-size: 20px;
-    color: #383434;
-    font-weight: 700;
-    margin-left: 2vh; 
-}
-.texto{
-    position: relative;
-    bottom: 3vh;
-    text-align: justify;
-    opacity: 0.8;
-    font-size: 15px;
-}
-#prop{
-    font-size: 5vh;
-    color: #383434;
-   
-}
-.exp{
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    align-items: center;
-    position: relative;
-}
-.experi-text{
-
-}
-.icoexperi{
-    border: 1px solid #383434;
-    background-color: #383434;
-    border-radius: 50%;
-}
-#experi{
-    font-size: 3vh;
-}
-/* espace de fin */*
-.fin-espace{
-    border: 1px solid black;
-    height: 150vh;
-    width: 5vh;
+.rue2{
+    font-size: 11px;
+    font-weight: lighter;
+    color: white;
+    opacity: 0.9;
+    margin-right: 3.5em;
 }
