--- a/styles.css
+++ b/styles.css
@@ -107,10 +107,9 @@
     background-color: rgba(209, 207, 182, 0.1);
 }
 .contenu{
-  max-height: 210mm;
-  max-width: 297mm;
-  height: 100vh;
-  width: 70.7vh;
+ 
+  height: 1120px;
+  width: 580px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -122,10 +121,12 @@
 }
             /* mon image en haut à gauche */
 .tof{
-    height: 27vh;
-    width: 27vh;
+    height: 37vh;
+    width: 37vh;
     border: 4px solid white;
     border-radius: 50%;
+    position: relative;
+    top: 2em;
 }
 .img-tete{
     position: relative;
@@ -183,13 +184,15 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: relative;
+    bottom: 2em;
     gap: 0.7em;
 }
 #con{
-    font-size: 2.5em;
+    font-size: 3.5em;
 }
 .contact{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 900;
     color: #632C2C;
 }
@@ -201,7 +204,8 @@
     gap: 1em;
     /* border: 1px solid black; */
     /* margin-right: 5em; */
-    margin: 0.1em 0;
+    margin: 0.2em 0;
+    font-size: 11px;
 }
 .m2{
     margin-right: 7.7em;
@@ -233,6 +237,9 @@
     gap: 0.7em;
     margin-top: 3em;
     margin-right: 4em;
+    position: relative;
+    right: 0.2em;
+    bottom: 3em;;
 }
 .cerclegrad{
     border: 1px solid white;
@@ -240,45 +247,54 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 2.3em;
-    width: 2.3em;
+    height: 4em;
+    width: 4em;
     background-color: white;
     
 }
 #grad{
-    font-size: 15px;
+    font-size: 2em;
 }
 .parcours{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 900;
     color: white;
 }
 .lycee{
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 700;
     color: white;
     margin-right: 7.1em;
     margin-top: 1em;
+    position: relative;
+    bottom: 2em;
 }
 .bac{
-    font-size: 11px;
+    font-size: 12px;
     font-weight: lighter;
     color: white;
     margin-right: 5.5em;
     opacity: 0.9;
+    position: relative;
+    bottom: 1.5em;
+    right: 0.5em;
 }
 .enetp{
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 700;
     color: white;
     margin-right: 10.3em;
+    position: relative;
+    bottom: 0.4em;
 }
 .master{
-    font-size: 11px;
+    font-size: 12px;
     font-weight: lighter;
     color: white;
     margin-right: 5.5em;
     opacity: 0.9;
+    position: relative;
+    right: 0.7em;
 }
 .b2{
     display: flex;
@@ -294,44 +310,58 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 2.3em;
-    width: 2.3em;
+    height: 4em;
+    width: 4em;
     background-color: white;
 }
 #ref{
-    font-size: 15px;
+    font-size: 2em;
 }
 .reference{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 900;
     color: white;
 }
 .amadou{
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 700;
     color: white;
     margin-right: 5.5em;
     margin-top: 0.5em;
+    position: relative;
+    position: relative;
+    top: 0.7em;
+    right: 0.5em;
+
 }
 .rue1{
-    font-size: 11px;
+    font-size: 12px;
     font-weight: lighter;
     color: white;
     opacity: 0.9;
     margin-right: 5em;
+    position: relative;
+    top: 1em;
+    right: 1em;
 }
 .ousmane{
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 700;
     color: white;
     margin-right: 5.5em;
+    position: relative;
+    top: 2.3em;
+    right: 0.5em;
 }
 .rue2{
-    font-size: 11px;
+    font-size: 12px;
     font-weight: lighter;
     color: white;
     opacity: 0.9;
     margin-right: 3.5em;
+    position: relative;
+    top: 3em;
+    right: 1.1em;
 }
                             /* Le Div à Droite */
 .droite{
@@ -343,46 +373,55 @@
 .apro{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     gap: 1em;
-    margin-right: 2em; 
-    margin-bottom: 1em;  
+    position: relative;
+    bottom: 4em;
+
 }
 .apropos{
     position: relative;
-    bottom: 1em;
+    top: 1em;
+    
+
 }
 #prop{
-    font-size: 2.5em;
+    font-size: 4em;
 }
 .propo-text{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 900;
     color: #632C2C;
+    padding-top: 0.4em;
+    
 }
 .texto{
-    font-size: 11px;
+    font-size: 15px;
     font-weight: lighter;
     color: #632C2C;
     opacity: 0.9;
     text-align: justify;
+    position: relative;
+    bottom: 2em;
 }
 .exp{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     gap: 1em;
-    margin-right: 2.3em;
+    position: relative;
+    bottom: 9em;
 }
 #experi{
-    font-size: 1.5em;
+    font-size: 2em;
 }
 .experi-text{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 900;
     color: #632C2C;
+    padding-top: 0.4em;
 }
 .cercleexperi{
     display: flex;
@@ -390,47 +429,57 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 50%;
-    height: 2.3em;
-    width: 2.3em;
+    height: 4em;
+    width: 4em;
 }
 .experiencepro{
     display: flex;
     flex-direction: column;
     gap: 1em;
+    position: relative;
+    top:5em;
 }
 .exp1{
-    font-size: 11px;
+    font-size: 13px;
     font-weight: lighter;
     color: #632C2C;
     opacity: 0.9;
     text-align: justify;
+    position: relative;
+    bottom: 7em;
 }
 .exp2{
-    font-size: 11px;
+    font-size: 13px;
     font-weight: lighter;
     color: #632C2C;
     opacity: 0.9;
     text-align: justify;
+    position: relative;
+    bottom: 7em;
 }
 .exp3{
-    font-size: 11px;
+    font-size: 13px;
     font-weight: lighter;
     color: #632C2C;
     opacity: 0.9;
     text-align: justify;
+    position: relative;
+    bottom: 7em;
 }
 .web{
-    font-size: 12px;
+    font-size: 15px;
     font-weight: 700;
     color: #632C2C;
+    position: relative;
+    
 }
 .product{
-    font-size: 12px;
+    font-size: 15px;
     font-weight: 700;
     color: #632C2C;
 }
 .motion{
-    font-size: 12px;
+    font-size: 15px;
     font-weight: 700;
     color: #632C2C;
 }
@@ -440,11 +489,15 @@
     justify-content: left;
     align-items: left;
     gap: 1em;
+    position: relative;
+    bottom: 10em;
 }
 .squil-text{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 900;
     color: #632C2C;
+   align-items: center;
+   padding-top: 0.4em;
 }
 .circlesquil{
     display: flex;
@@ -452,8 +505,8 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 50%;
-    height: 2.3em;
-    width: 2.3em;
+    height: 4em;
+    width: 4em;
 }
 #chart{
     font-size: 1.5em;
@@ -462,11 +515,73 @@
     display: flex;
     flex-direction: row;
     gap: 2em;
+    position: relative;
+    bottom: 9em;
+}
+.htm-text{
+    font-size: 15px;
+    font-weight: 700;
+}
+.adobe-text{
+    font-size: 15px;
+    font-weight: 700;
+}
+.microsoft-text{
+    font-size: 15px;
+    font-weight: 700;
+
 }
 .skills{
     display: flex;
     flex-direction: column;
     gap: 1em;
+    position: relative;
+    top: 5em;
+}
+.progress1{
+    border: 1px solid black;
+    height: 0.6em;
+    width: 11em;
+    background-color: #632C2C;
+    border-radius: 2px;
+    position: relative;
+    left: 4em;
+    
+}
+.inprogress1{
+    border: 1px solid red;
+    background-color: #D9D9D9;
+    width: 3em;
+    height: 0.3em;
+}
+.progress2{
+    border: 1px solid black;
+    height: 0.6em;
+    width: 11em;
+    background-color: #632C2C;
+    border-radius: 2px;
+    position: relative;
+    right: 0.3em;
+   
+}
+.inprogress2{
+    border: 1px solid red;
+    background-color: #D9D9D9;
+    width: 3em;
+    height: 0.3em;
+}
+.progress3{
+    border: 1px solid black;
+    height: 0.6em;
+    width: 11em;
+    background-color: #632C2C;
+    border-radius: 2px;
+}
+.inprogress3{
+    border: 1px solid red;
+    background-color: #D9D9D9;
+    width: 3em;
+    height: 0.3em;
 }
 .skills p{
     color: #632C2C;
@@ -487,14 +602,17 @@
     display: flex;
     flex-direction: row;
     gap: 1em;
+    position: relative;
+    bottom: 4em;
 }
 .lang-text{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 900;
     color: #632C2C;
+    padding-top: 0.3em;
 }
 #langico{
-    font-size: 1.5em;
+    font-size: 2em;
 }
 .cerclelang{
     display: flex;
@@ -502,27 +620,38 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 50%;
-    height: 2.3em;
-    width: 2.3em;
+    height: 4em;
+    width: 4em;
+}
+.langage{
+    position: relative;
+    top: 1em;
 }
 .anglais{
     color: #632C2C;
+    font-size: 15px;
 }
 .francais{
     color: #632C2C;
+    font-size: 15px;
 }
 .l1{
     border: 1px solid #632C2C;
     background-color: #632C2C;
-    height: 0.2em;
-    width: 0.2em;
+    height: 1em;
+    width: 1em;
     border-radius: 50%;
+
+}
+.glob1,.glob2{
+    position: relative;
+    bottom: 3em;
 }
 .l2{
     border: 1px solid #632C2C;
     background-color: #632C2C;
-    height: 0.2em;
-    width: 0.2em;
+    height: 1em;
+    width: 1em;
     border-radius: 50%;
 }
 .glob1,.glob2{
@@ -540,25 +669,38 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 50%;
-    height: 2.3em;
-    width: 2.3em;
+    height: 4em;
+    width: 4em;
+}
+#hob{
+    font-size: 2em;
 }
 .hobby-text{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 900;
     color: #632C2C;
+    padding-top: 0.3em;
 }
 .hobby{
     display: flex;
     flex-direction: row;
     gap: 1em;
+    position: relative;
+    bottom: 5em;
+}
+.hobbies{
+    position: relative;
+    top: 1em;
 }
 .hobbies2{
     border: 1px solid #632C2C;
     background-color: #632C2C;
-    height: 0.2em;
-    width: 0.2em;
+    height: 1em;
+    width: 1em;
     border-radius: 50%;
+}
+.lecture{
+    font-size: 15px;
 }
 .lec{
     display: flex;
@@ -568,6 +710,8 @@
     justify-content: left;
     margin-left: 1em;
     margin-top: 1em;
+    position: relative;
+    bottom: 4em;
 }
 .mesboutons{
     display: flex;
@@ -607,4 +751,118 @@
     transform: scale(1.3);
 }
 
+                /* Les parties Responsives */
+    
+@media screen and (max-width:1071px){
+   .mesboutons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 10px;
+   }
+
+   .cv{
+    display: flex;
+    gap: 1em;
+    flex-direction: column;
+   }
+   .contenu{
+    height: 100vh;
+    width: 70.7vh;
   
+   }
+}
+@media screen and (max-width:625px){
+    .contenu{
+        height: 100vh;
+        width: 60.7vh;
+        }
+    .mesboutons{
+        height: vh;
+    }
+    .experi-text{
+        font-size: 14px;
+    }
+    .propo-text{
+        font-size: 14px;
+    }
+    .nom{
+        
+    }
+    .nom-dev{
+
+    }
+    .contact{
+        font-size: 14px;
+    }
+    .parcours{
+        font-size: 14px;
+    }
+    .reference{
+        font-size: 14px;
+    }
+    .squil-text{
+        font-size: 14px;
+    }
+    .lang-text{
+        font-size: 14px;
+    }
+    .hobby-text{
+        font-size: 14px;
+    }
+    .m1{
+        margin-right: 10px;
+    }
+
+    .tof{
+        height: 24vh;
+    width: 24vh;
+    }
+
+}
+@media screen and (max-width:623px){
+    .experi-text{
+        font-size: 13px;
+    }
+    .propo-text{
+        font-size: 13px;
+    }
+    .nom{
+        
+    }
+    .nom-dev{
+
+    }
+    .contact{
+        font-size: 13px;
+    }
+    .parcours{
+        font-size: 13px;
+    }
+    .reference{
+        font-size: 13px;
+    }
+    .squil-text{
+        font-size: 13px;
+    }
+    .lang-text{
+        font-size: 13px;
+    }
+    .hobby-text{
+        font-size: 13px;
+    }
+    .m1{
+        margin-right: 16px;
+    }
+
+    .tof{
+        height: 23vh;
+        width: 23vh;
+    }
+
+}
+@media screen and (max-width:623px){
+    
+}
